Add user type #25
Handle authorities